--- a/deb/openmediavault/usr/share/openmediavault/locale/ja_JP/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/ja_JP/openmediavault.po
@@ -8,8 +8,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-02-25 20:15+0100\n"
-"PO-Revision-Date: 2016-02-25 19:15+0000\n"
+"POT-Creation-Date: 2016-03-02 21:23+0100\n"
+"PO-Revision-Date: 2016-03-02 20:24+0000\n"
 "Last-Translator: Volker <votdev@gmx.de>\n"
 "Language-Team: Japanese (Japan) (http://www.transifex.com/votdev/openmediavault/language/ja_JP/)\n"
 "MIME-Version: 1.0\n"
@@ -723,6 +723,9 @@ msgstr "コンベイアンスセルフテスト"
 msgid "Cook Islands"
 msgstr "クック諸島"
 
+msgid "Copy to clipboard"
+msgstr ""
+
 msgid "Costa Rica"
 msgstr "コスタリカ"
 
@@ -1341,7 +1344,7 @@ msgid "Filesystem '%s' not supported"
 msgstr "ファイルシステム '%s' はサポートしていません"
 
 msgid "Filesystem Type"
-msgstr ""
+msgstr "ファイルシステムタイプ"
 
 msgid "Filesystems"
 msgstr "ファイルシステム"
@@ -1563,7 +1566,7 @@ msgid "Identify"
 msgstr "識別"
 
 msgid "Identify As"
-msgstr ""
+msgstr "証明"
 
 msgid "Identify network interface device"
 msgstr "ネットワークインタフェイスデバイスを識別する"
@@ -3048,7 +3051,7 @@ msgid "Shared folder"
 msgstr "共有フォルダ"
 
 msgid "Shared folder + content"
-msgstr ""
+msgstr "共有フォルダ + コンテンツ"
 
 msgid "Shared folder must not be equal"
 msgstr "共有フォルダが同じであってはならない"
@@ -3858,13 +3861,13 @@ msgid "Up delay"
 msgstr "Up delay"
 
 msgid "Update Management"
-msgstr ""
+msgstr "アップデート管理"
 
 msgid "Update Management - History"
-msgstr ""
+msgstr "アップデート管理  - 履歴"
 
 msgid "Update Management - Terminal output"
-msgstr ""
+msgstr "アップデート管理 - ターミナル出力"
 
 msgid "Update now"
 msgstr "いますぐアップデート"
