--- a/deb/openmediavault/usr/share/openmediavault/locale/it_IT/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/it_IT/openmediavault.po
@@ -14,8 +14,8 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2016-03-02 21:23+0100\n"
-"PO-Revision-Date: 2016-03-02 20:24+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2016-03-02 21:46+0000\n"
+"Last-Translator: Paolo Velati <paolo.velati@gmail.com>\n"
 "Language-Team: Italian (http://www.transifex.com/votdev/openmediavault/language/it/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -729,7 +729,7 @@ msgid "Cook Islands"
 msgstr "Isole Cook"
 
 msgid "Copy to clipboard"
-msgstr ""
+msgstr "Copia negli appunti"
 
 msgid "Costa Rica"
 msgstr "Costa Rica"
