--- a/deb/openmediavault/usr/share/openmediavault/locale/ru_RU/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/ru_RU/openmediavault.po
@@ -16,8 +16,8 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2016-03-02 21:23+0100\n"
-"PO-Revision-Date: 2016-03-02 20:24+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2016-03-03 06:51+0000\n"
+"Last-Translator: артур Мудрых <arturmon82@gmail.com>\n"
 "Language-Team: Russian (Russia) (http://www.transifex.com/votdev/openmediavault/language/ru_RU/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -731,7 +731,7 @@ msgid "Cook Islands"
 msgstr "острова Кука"
 
 msgid "Copy to clipboard"
-msgstr ""
+msgstr "Скопировать в буфер обмена"
 
 msgid "Costa Rica"
 msgstr "Коста-Рика"
@@ -865,16 +865,16 @@ msgid "Device Mapper %s [%s, %s]"
 msgstr "Device Mapper %s [%s, %s]"
 
 msgid "Device has a few bad sectors"
-msgstr ""
+msgstr "Устройств имеет несколько плохих секторов"
 
 msgid "Device has many bad sectors"
-msgstr ""
+msgstr "Устройств имеет много плохих секторов"
 
 msgid "Device information"
 msgstr "Информация об устройстве"
 
 msgid "Device is being used outside design parameters"
-msgstr ""
+msgstr "Устройство используется за пределами расчетных параметров"
 
 msgid "Device model"
 msgstr "Модель устройства"
@@ -883,10 +883,10 @@ msgid "Device properties"
 msgstr "Свойства устройства"
 
 msgid "Device was used outside of design parameters in the past"
-msgstr ""
+msgstr "Раньше устройство было использовано за пределами расчетных параметров"
 
 msgid "Device(s)"
-msgstr ""
+msgstr "Устройство(а)"
 
 msgid "Device/Label"
 msgstr "Устройство / Метка"
@@ -1270,7 +1270,7 @@ msgid "FTP - Transfer log"
 msgstr "FTP - Протокол передачи"
 
 msgid "FTP-Proxy"
-msgstr ""
+msgstr "FTP-Прокси"
 
 msgid "FXP"
 msgstr "FXP"
@@ -1351,7 +1351,7 @@ msgid "Filesystem '%s' not supported"
 msgstr "Файловая система '%s' не поддерживается"
 
 msgid "Filesystem Type"
-msgstr ""
+msgstr "Тип файловой системы"
 
 msgid "Filesystems"
 msgstr "Файловые системы"
@@ -1495,16 +1495,16 @@ msgid "Guyana"
 msgstr "Гайана"
 
 msgid "HTTP-Proxy"
-msgstr ""
+msgstr "HTTP-Прокси"
 
 msgid "HTTPS-Proxy"
-msgstr ""
+msgstr "HTTPS-Прокси"
 
 msgid "Haiti"
 msgstr "Гаити"
 
 msgid "Hardware address"
-msgstr ""
+msgstr "Аппаратный адрес"
 
 msgid "Heard Island and McDonald Islands"
 msgstr "Остров Херд и острова Макдональд"
@@ -1573,7 +1573,7 @@ msgid "Identify"
 msgstr "Идентифицировать"
 
 msgid "Identify As"
-msgstr ""
+msgstr "Идентифицировать как"
 
 msgid "Identify network interface device"
 msgstr "Определить сетевой интерфейс"
@@ -2566,7 +2566,7 @@ msgid "Protocol"
 msgstr "Протокол"
 
 msgid "Proxy"
-msgstr ""
+msgstr "Прокси"
 
 msgid "Public"
 msgstr "Опубликованный"
@@ -2821,10 +2821,10 @@ msgid "SSH"
 msgstr "SSH"
 
 msgid "SSH certificate"
-msgstr ""
+msgstr "SSH сертификат"
 
 msgid "SSH port"
-msgstr ""
+msgstr "Порт SSH"
 
 msgid "SSID"
 msgstr "SSID"
@@ -2956,7 +2956,7 @@ msgid "Select a volume ..."
 msgstr "Выберите том..."
 
 msgid "Select an authentication mode ..."
-msgstr ""
+msgstr "Выберите режим проверки подлинности ..."
 
 msgid "Select devices to be added to the RAID device"
 msgstr "Выберите устройства для добавления в RAID"
@@ -3043,7 +3043,7 @@ msgstr "Установить только для записи"
 msgid ""
 "Sets the interval between disk checks to N seconds, logging S.M.A.R.T. "
 "errors and changes of S.M.A.R.T. attributes."
-msgstr ""
+msgstr "Устанавливает интервал между проверками  диска в N секунд, протоколирование S.M.A.R.T. Ошибки и изменения S.M.A.R.T. атрибутов."
 
 msgid "Settings"
 msgstr "Настройки"
@@ -3058,7 +3058,7 @@ msgid "Shared folder"
 msgstr "Общий каталог"
 
 msgid "Shared folder + content"
-msgstr ""
+msgstr "Общий каталог + содержимое"
 
 msgid "Shared folder must not be equal"
 msgstr "Общий каталог не должен быть равным"
@@ -3352,7 +3352,7 @@ msgid "The RSA public key in OpenSSH format."
 msgstr "Открытый ключ RSA в формате OpenSSH."
 
 msgid "The SSH certificate used for authentication."
-msgstr ""
+msgstr "Сертификат SSH используется для проверки подлинности."
 
 msgid "The SSL certificate."
 msgstr "Сертификат SSL."
@@ -3868,13 +3868,13 @@ msgid "Up delay"
 msgstr "Задержка"
 
 msgid "Update Management"
-msgstr ""
+msgstr "Управление Обновлениями"
 
 msgid "Update Management - History"
-msgstr ""
+msgstr "Управление Обновлениями - История"
 
 msgid "Update Management - Terminal output"
-msgstr ""
+msgstr "Управление Обновлениями - Терминальный выход"
 
 msgid "Update now"
 msgstr "Обновить сейчас"
