--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -774,7 +774,7 @@ openmediavault (1.0.30) stable; urgency=low
   * Refactor filesystem backend. Introduce class OMVFilesystemBackendAbstract,
     OMVFilesystemFactory and OMVFilesystemAbstract.
     All supported filesystems must extend this class. Backends must be
-    registered via OMVFilesystems::registerBackend.
+    registered via \OMV\System\Filesystem\Filesystems::registerBackend.
   * Enhance OMVStorageDeviceBackendAbstract class.
   * Mantis 0001142: Shares with spaces in the path/directory don't appear
     when using FTP/FTPS.
