--- a/deb/openmediavault-usbbackup/debian/changelog
+++ b/deb/openmediavault-usbbackup/debian/changelog
@@ -42,7 +42,7 @@ openmediavault-usbbackup (1.4) stable; urgency=low
 
 openmediavault-usbbackup (1.3) stable; urgency=low
 
-  * Mantis 0001284: Use \OMV\System\Filesystem\Filesystems backend to support additional
+  * Mantis 0001284: Use \OMV\System\Filesystem\Backend\Manager backend to support additional
     filesystems.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Thu, 19 Mar 2015 14:38:29 +0100
