* Mantis 0001491: Invalid smartmontools configuration file.

--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault (3.0.15) stable; urgency=low
+
+  * Mantis 0001491: Invalid smartmontools configuration file.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Wed, 16 Mar 2016 19:26:13 +0100
+
 openmediavault (3.0.14) stable; urgency=low
 
   * Update locales.
