--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,5 +1,6 @@
 openmediavault (2.2.2) stable; urgency=low
 
+  * Various improvements.
   * Fix bug in the FileSystemMgmt::delete RPC.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Fri, 26 Feb 2016 11:53:21 +0100
