--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault (2.2.3) stable; urgency=low
+
+  * Various improvements.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Mon, 04 Apr 2016 14:45:38 +0200
+
 openmediavault (2.2.2) stable; urgency=low
 
   * Various improvements.
