--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -139,8 +139,16 @@ openmediavault (3.0) stable; urgency=low
 
  -- Volker Theile <volker.theile@openmediavault.org>  Mon, 30 Nov 2015 15:53:40 +0100
 
+openmediavault (2.2.3) stable; urgency=low
+
+  * Various improvements.
+  * Mantis 0001501: Running smartctl from webGUI on virtio drives fails.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Mon, 04 Apr 2016 14:45:38 +0200
+
 openmediavault (2.2.2) stable; urgency=low
 
+  * Various improvements.
   * Fix bug in the FileSystemMgmt::delete RPC.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Fri, 26 Feb 2016 11:53:21 +0100
