--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,6 +1,7 @@
 openmediavault (2.2.3) stable; urgency=low
 
   * Various improvements.
+  * Mantis 0001501: Running smartctl from webGUI on virtio drives fails.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Mon, 04 Apr 2016 14:45:38 +0200
 
