--- a/deb/openmediavault-route/debian/changelog
+++ b/deb/openmediavault-route/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault-route (3.0.2) stable; urgency=low
+
+  * Adapt to new framework.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Wed, 27 Apr 2016 17:57:29 +0200
+
 openmediavault-route (3.0.1) stable; urgency=low
 
   * Update locales.
