--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,6 +1,7 @@
 openmediavault (3.0.16) stable; urgency=low
 
   * Various improvements.
+  * Mantis 0001506: mtu: The value '1500' is not a string.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Sat, 23 Apr 2016 22:23:37 +0200
 
