--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -2,6 +2,7 @@ openmediavault (3.0.16) stable; urgency=low
 
   * Various improvements.
   * Mantis 0001506: mtu: The value '1500' is not a string.
+  * Mantis 0001508: omv-firstaid: uuid: The value 'undefined' is not an UUIDv4.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Sat, 23 Apr 2016 22:23:37 +0200
 
