--- a/deb/openmediavault/usr/share/openmediavault/locale/ja_JP/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/ja_JP/openmediavault.po
@@ -9,8 +9,8 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2016-04-23 19:15+0200\n"
-"PO-Revision-Date: 2016-04-23 17:16+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2016-04-26 02:01+0000\n"
+"Last-Translator: Toshihiro Kan <kansuke4649@gmail.com>\n"
 "Language-Team: Japanese (Japan) (http://www.transifex.com/votdev/openmediavault/language/ja_JP/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2250,7 +2250,7 @@ msgid "Package information"
 msgstr "パッケージ情報"
 
 msgid "Page not found"
-msgstr ""
+msgstr "ページがありません"
 
 msgid "Pakistan"
 msgstr "パキスタン"
@@ -4005,7 +4005,7 @@ msgid "Zimbabwe"
 msgstr "ジンバブエ"
 
 msgid "control panel"
-msgstr ""
+msgstr "コントロールパネル"
 
 msgid "day"
 msgstr "日"
