--- a/deb/openmediavault/usr/share/openmediavault/locale/es_ES/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/es_ES/openmediavault.po
@@ -12,8 +12,8 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2016-04-23 19:15+0200\n"
-"PO-Revision-Date: 2016-04-23 17:16+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2016-04-23 21:22+0000\n"
+"Last-Translator: Raul Fernandez Garcia <raulfg3@gmail.com>\n"
 "Language-Team: Spanish (Spain) (http://www.transifex.com/votdev/openmediavault/language/es_ES/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2253,7 +2253,7 @@ msgid "Package information"
 msgstr "Información del paquete"
 
 msgid "Page not found"
-msgstr ""
+msgstr "Página no encontrada"
 
 msgid "Pakistan"
 msgstr "Pakistan"
@@ -4008,7 +4008,7 @@ msgid "Zimbabwe"
 msgstr "Zimbabue"
 
 msgid "control panel"
-msgstr ""
+msgstr "Panel de control"
 
 msgid "day"
 msgstr "dia"
