--- a/deb/openmediavault/usr/share/openmediavault/locale/ru_RU/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/ru_RU/openmediavault.po
@@ -16,8 +16,8 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2016-04-23 19:15+0200\n"
-"PO-Revision-Date: 2016-04-23 17:16+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2016-04-27 12:47+0000\n"
+"Last-Translator: артур Мудрых <arturmon82@gmail.com>\n"
 "Language-Team: Russian (Russia) (http://www.transifex.com/votdev/openmediavault/language/ru_RU/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2257,7 +2257,7 @@ msgid "Package information"
 msgstr "Информация о пакете"
 
 msgid "Page not found"
-msgstr ""
+msgstr "Страница не найдена"
 
 msgid "Pakistan"
 msgstr "Пакистан"
@@ -4012,7 +4012,7 @@ msgid "Zimbabwe"
 msgstr "Зимбабве"
 
 msgid "control panel"
-msgstr ""
+msgstr "панель управления"
 
 msgid "day"
 msgstr "день"
