--- a/deb/openmediavault/usr/share/openmediavault/locale/tr_TR/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/tr_TR/openmediavault.po
@@ -9,8 +9,8 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2016-04-23 19:15+0200\n"
-"PO-Revision-Date: 2016-04-23 17:16+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2016-04-29 18:57+0000\n"
+"Last-Translator: Serhat SUT <serhat.sut@gmail.com>\n"
 "Language-Team: Turkish (Turkey) (http://www.transifex.com/votdev/openmediavault/language/tr_TR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2250,7 +2250,7 @@ msgid "Package information"
 msgstr "Paket bilgisi"
 
 msgid "Page not found"
-msgstr ""
+msgstr "Sayfa bulunamadı"
 
 msgid "Pakistan"
 msgstr "Pakistan"
@@ -4005,7 +4005,7 @@ msgid "Zimbabwe"
 msgstr "Zimbabve"
 
 msgid "control panel"
-msgstr ""
+msgstr "kontrol paneli"
 
 msgid "day"
 msgstr "gün"
