--- a/deb/openmediavault/usr/share/openmediavault/locale/zh_TW/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/zh_TW/openmediavault.po
@@ -10,8 +10,8 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2016-04-23 19:15+0200\n"
-"PO-Revision-Date: 2016-04-23 17:16+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2016-04-23 17:39+0000\n"
+"Last-Translator: kochin <kochinc@outlook.com>\n"
 "Language-Team: Chinese (Taiwan) (http://www.transifex.com/votdev/openmediavault/language/zh_TW/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2251,7 +2251,7 @@ msgid "Package information"
 msgstr "套件資訊"
 
 msgid "Page not found"
-msgstr ""
+msgstr "未找到網頁"
 
 msgid "Pakistan"
 msgstr "巴基斯坦"
@@ -4006,7 +4006,7 @@ msgid "Zimbabwe"
 msgstr "辛巴威"
 
 msgid "control panel"
-msgstr ""
+msgstr "控制台"
 
 msgid "day"
 msgstr "天"
