--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault (3.0.18) stable; urgency=low
+
+  * Various improvements and bugfixes.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Tue, 10 May 2016 21:55:09 +0200
+
 openmediavault (3.0.17) stable; urgency=low
 
   * Update locales.
