--- a/deb/openmediavault-clamav/debian/changelog
+++ b/deb/openmediavault-clamav/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault-clamav (3.1.3) stable; urgency=low
+
+  * Fix bug in RPC.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Wed, 18 May 2016 23:37:30 +0200
+
 openmediavault-clamav (3.1.2) stable; urgency=low
 
   * Update locales.
