--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault (3.0.20) stable; urgency=low
+
+  *
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Thu, 19 May 2016 00:01:32 +0200
+
 openmediavault (3.0.19) stable; urgency=low
 
   * Update locales.
