--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,6 +1,6 @@
 openmediavault (3.0.20) stable; urgency=low
 
-  *
+  * Mantis 0001525: Do not work download button on Diagnosis | System Logs.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Thu, 19 May 2016 00:01:32 +0200
 
