Delete existing settings because it is not possible to migrate them to the new configuration. It is not possible to transform the filesystem UUID to the device file if the device is not plugged in.

--- a/deb/openmediavault-usbbackup/debian/changelog
+++ b/deb/openmediavault-usbbackup/debian/changelog
@@ -1,5 +1,7 @@
 openmediavault-usbbackup (3.0.2) stable; urgency=low
 
+  * !!! ATTENTION !!!
+    All existing settings will get lost, it is not possible to migrate them.
   * Update locales.
   * Adapt to new framework.
 
