--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault (3.0.21) stable; urgency=low
+
+  * Various improvements and bugfixes.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Mon, 30 May 2016 08:00:12 +0200
+
 openmediavault (3.0.20) stable; urgency=low
 
   * Update locales.
