--- a/deb/openmediavault-ldap/debian/changelog
+++ b/deb/openmediavault-ldap/debian/changelog
@@ -1,3 +1,10 @@
+openmediavault-ldap (3.1) stable; urgency=low
+
+  * Update locales.
+  * Adapt to new framework.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Fri, 03 Jun 2016 08:01:28 +0200
+
 openmediavault-ldap (3.0.2) stable; urgency=low
 
   * Update locales.
