--- a/deb/openmediavault-netatalk/debian/changelog
+++ b/deb/openmediavault-netatalk/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault-netatalk (3.1) stable; urgency=low
+
+  * Adapt to new framework.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Fri, 03 Jun 2016 08:29:18 +0200
+
 openmediavault-netatalk (3.0.3) stable; urgency=low
 
   * Update locales.
