--- a/deb/openmediavault-route/debian/changelog
+++ b/deb/openmediavault-route/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault-route (3.1) stable; urgency=low
+
+  * Adapt to new framework.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Fri, 03 Jun 2016 08:30:12 +0200
+
 openmediavault-route (3.0.2) stable; urgency=low
 
   * Adapt to new framework.
