--- a/deb/openmediavault-shairport/debian/changelog
+++ b/deb/openmediavault-shairport/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault-shairport (3.2) stable; urgency=low
+
+  * Adapt to new framework.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Fri, 03 Jun 2016 08:02:47 +0200
+
 openmediavault-shairport (3.1) stable; urgency=low
 
   * Update locales.
