--- a/deb/openmediavault-usbbackup/debian/changelog
+++ b/deb/openmediavault-usbbackup/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault-usbbackup (3.1) stable; urgency=low
+
+  * Adapt to new framework.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Fri, 03 Jun 2016 08:31:20 +0200
+
 openmediavault-usbbackup (3.0.2) stable; urgency=low
 
   * !!! ATTENTION !!!
